// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing test snapshot after API_GET 1`] = `
<div>
  <button
    id="button1"
    onClick={[Function]}
  >
    API1
  </button>
  <br />
  <p
    id="para"
  >
    1
  </p>
  <button
    id="button2"
    onClick={[Function]}
  >
    API2
  </button>
  <br />
  <p>
    not set
  </p>
  <button
    id="button3"
    onClick={[Function]}
  >
    API3
  </button>
  <br />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  >
    not set
  </p>
  <button
    id="button4"
    onClick={[Function]}
  >
    API4
  </button>
  <br />
</div>
`;

exports[`Snapshot Testing test snapshot after API_GET1 1`] = `
<div>
  <button
    id="button1"
    onClick={[Function]}
  >
    API1
  </button>
  <br />
  <p
    id="para"
  >
    not set
  </p>
  <button
    id="button2"
    onClick={[Function]}
  >
    API2
  </button>
  <br />
  <p>
    not set
  </p>
  <button
    id="button3"
    onClick={[Function]}
  >
    API3
  </button>
  <br />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  >
    1977
  </p>
  <button
    id="button4"
    onClick={[Function]}
  >
    API4
  </button>
  <br />
</div>
`;

exports[`Snapshot Testing test snapshot on initial rendering 1`] = `
<div>
  <button
    id="button1"
    onClick={[Function]}
  >
    API1
  </button>
  <br />
  <p
    id="para"
  >
    not set
  </p>
  <button
    id="button2"
    onClick={[Function]}
  >
    API2
  </button>
  <br />
  <p>
    not set
  </p>
  <button
    id="button3"
    onClick={[Function]}
  >
    API3
  </button>
  <br />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  >
    not set
  </p>
  <button
    id="button4"
    onClick={[Function]}
  >
    API4
  </button>
  <br />
</div>
`;
